feat(function): 完善 doThen 方法并优化相关功能
- 在 Complete 和 Prepare 类中添加 doThen() 和 doThen(Executor) 方法
- 优化 FunctionUtil 类中的缓存处理逻辑
- 移除 Complete 类中不再使用的 import语句